--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -423,20 +423,21 @@ video {
 }
 
 h1 {
+  font-size: 2.5rem;
+  font-weight: 500;
+  margin-bottom: 1.75rem;
+}
+
+h2 {
   font-size: 1.25rem;
   line-height: 1.75rem;
   font-weight: 500;
 }
 
-h2 {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-  margin-top: 0.5rem;
-}
-
 h3 {
   font-size: 1.125rem;
   line-height: 1.75rem;
+  margin-top: 0.5rem;
 }
 
 li {
@@ -444,6 +445,12 @@ li {
   line-height: 1.75rem;
   margin-top: 0.5rem;
   margin-left: 0.5rem;
+}
+
+.ordered {
+  margin-bottom: 2.5rem;
+  --tw-text-opacity: 1;
+  color: rgb(30 64 175 / var(--tw-text-opacity));
 }
 
 *, ::before, ::after {
@@ -584,17 +591,8 @@ li {
   margin: 1.5rem;
 }
 
-.mb-7 {
-  margin-bottom: 1.75rem;
-}
-
 .ml-2 {
   margin-left: 0.5rem;
-}
-
-.text-blue-800 {
-  --tw-text-opacity: 1;
-  color: rgb(30 64 175 / var(--tw-text-opacity));
 }
 
 .text-green-700 {
