--- a/app/src/css/tailwind_input.css
+++ b/app/src/css/tailwind_input.css
@@ -1,21 +1,32 @@
 @tailwind base;
 @layer base {
     h1 {
+        @apply text-[2.5rem];
+        @apply font-medium;
+        @apply mb-[1.75rem];
+    }
+
+    h2 {
         @apply text-xl;
         @apply font-medium;
     }
-    h2 {
+
+    h3 {
         @apply text-lg;
         @apply mt-2;
     }
-    h3  {
-        @apply text-lg;
-    }
+
     li {
         @apply text-lg;
         @apply mt-2;
         @apply ml-2;
     }
+
+    .ordered {
+        @apply mb-[2.5rem];
+        @apply text-blue-800;
+    }
 }
+
 @tailwind components;
 @tailwind utilities;
